kube/home/networking/cilium-gateway/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cilium-gateway-canary
spec:
  parentRefs:
    - name: external-gw
      sectionName: http
  hostnames:
    - cilium-gateway-canary.invalid
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: cilium-gateway-canary
          port: 8080
